2010-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.h: New Proxy class with operator T() to borrow
	  Rcpp's automatic wrappers
	* inst/examples/standard/rinside_sample8.cpp: Use Proxy()

2010-03-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Increase Version: to 0.2.2

	* .Rbuildignore: Added to exclude volatile Doxygen-generated docs
	   from, zip-archives will be made available as for Rcpp

2010-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* R/RInsidePaths.R: Updated to current version of Rcpp's file (minus
	  the cxx0x bits) in order to standardize linking options, with this
	  we now default to static linking on OS X and Windows as Rcpp does.

	* src/RInside.cpp: Use explicit std::string() constructors for all
	  text arguments inside throw() calls (to satisfy the Windows compiler)

2010-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.{h,cpp}: parseEval* function changed slightly so that
	  SEXP parseEval(string) is now preferred, and it as well as
	  void parseEvalQ(string) now throw exceptions; they call the
	  non-throwing older int parseEval(string, SEXP). We changed the
	  parseEvalQ from int to void which is more in-line with it purpose.
	* inst/examples/standard/rinside_sample{2,4,5}.cpp: Adapted
	  accordingly, mostly by removing no-longer-needed error checking
	  and exepction throw which has now move 'up' into RInside.cpp

2010-02-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/mpi/: Added two variants using the C++ API to MPI

2010-02-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Add new parseEval() member function returning a SEXP
	* src/RInside.h: idem

	* src/inst/examples/standard/rinside_sample8.cpp: Show new parseEval()

2010-02-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/mpi/: Add examples contributed by Jianping Hua
	* inst/examples/: Update two existing examples to new Rcpp API

2010-02-12  Romain Francois <romain@r-enthusiasts.com>
